middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: pitstop-jwtauth-##Namespace##
spec:
  plugin:
    jwtAuth:
      source: jwtSourceNat
      forwardAuthorization: true
      username: userId
      claims: Contains(`email`, `gmail.com`)
      claims: Equals(`user_role`,`admin`)
