rabbitsvc.yml
apiVersion: v1
kind: Service
metadata:
  name: rs-rmq-mgt
  namespace: ##Namespace##
spec:
  selector:
   app: rabbitmq
  ports:           
   - name: http    
     protocol: TCP 
     port: 15672
     targetPort: 15672
   - name: amqp
     protocol: TCP
     port: 5672
     targetPort: 5672
  type: ClusterIP
